--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "joi": "^13.1.1",
+    "morgan": "^1.9.0",
+    "sequelize": "^4.32.2",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0-beta.0",
