--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "mdi": "^2.1.19",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-youtube-embed": "^2.1.3",
     "vuetify": "^0.17.6",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
